3.2.2 prepare to change jdk